[package]
name = "torrent_client2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
rand = "0.8.5"
sha1 = "0.10.5"
threadpool = "1.8.1"
url = "2.3.1"
bit-vec = "0.6.3"
